--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -153,14 +153,6 @@
 			Name="tools"
 			>
 			<File
-				RelativePath="..\..\..\external\tools\ejoy2d.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\external\tools\ejoy2d.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\external\tools\fault.c"
 				>
 			</File>
@@ -170,10 +162,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\external\tools\opengl.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\external\tools\package.h"
 				>
 			</File>
 			<File
@@ -318,11 +306,23 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath="..\..\..\src\ejoy2d.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\ejoy2d.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\eploader.c"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\src\eploader.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\package.h"
 			>
 		</File>
 		<File
