--- a/easypacker/platform/msvc2008/projects/libpacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/libpacker.vcproj
@@ -296,6 +296,10 @@
 				RelativePath="..\..\..\src\libpacker\math.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libpacker\typedef.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
