--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -289,7 +289,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\external\dtex\dtex_sprite.cpp"
+				RelativePath="..\..\..\external\dtex\dtex_sprite.c"
 				>
 			</File>
 			<File
