--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -325,6 +325,18 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="rrr"
+					>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\BinaryRRR.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\BinaryRRR.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="image"
@@ -414,7 +426,7 @@
 					</File>
 				</Filter>
 				<Filter
-					Name="pack"
+					Name="cut"
 					>
 					<File
 						RelativePath="..\..\..\src\easydb_cl\RegularRectCut.cpp"
