--- a/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
+++ b/easyejoy2d/platform/msvc2008/projects/testdtex.vcproj
@@ -337,6 +337,18 @@
 				RelativePath="..\..\..\src\testdtex\TestSprite.h"
 				>
 			</File>
+			<Filter
+				Name="normal"
+				>
+			</Filter>
+			<Filter
+				Name="format"
+				>
+			</Filter>
+			<Filter
+				Name="regular rect"
+				>
+			</Filter>
 		</Filter>
 	</Files>
 	<Globals>
