--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\pvrtextool\include&quot;;&quot;..\..\..\..\editor-external\rg_etc1&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\pvrtextool\include&quot;;&quot;..\..\..\..\editor-external\rg_etc1&quot;;&quot;..\..\..\..\editor-external\etcpack&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\pvrtextool\include&quot;;&quot;..\..\..\..\editor-external\rg_etc1&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\libpng\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\pvrtextool\include&quot;;&quot;..\..\..\..\editor-external\rg_etc1&quot;;&quot;..\..\..\..\editor-external\etcpack&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -328,6 +328,34 @@
 				RelativePath="..\..\..\src\libimage\TransToPVR.h"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="external"
+			>
+			<Filter
+				Name="etcpack"
+				>
+				<File
+					RelativePath="..\..\..\..\editor-external\etcpack\source\etcdec.cxx"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\etcpack\source\etcimage.cxx"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\etcpack\source\etcimage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\etcpack\source\etcpack.cxx"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\etcpack\etcpack_lib.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\libimage\config.h"
