--- a/easytexture/platform/msvc2008/projects/libtexture.vcproj
+++ b/easytexture/platform/msvc2008/projects/libtexture.vcproj
@@ -245,6 +245,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="frame"
+			>
+			<File
+				RelativePath="..\..\..\src\libtexture\EditDialog.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libtexture\EditDialog.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libtexture\config.h"
 			>
