--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -629,6 +629,30 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="external"
+			>
+			<Filter
+				Name="rg_etc1"
+				>
+				<File
+					RelativePath="..\..\..\..\editor-external\rg_etc1\rg_etc1.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\rg_etc1\rg_etc1.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\rg_etc1\rg_etc1_for_c.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\..\editor-external\rg_etc1\rg_etc1_for_c.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\dtex.h"
 			>
