--- a/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
+++ b/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
@@ -228,11 +228,11 @@
 				Name="stage"
 				>
 				<File
-					RelativePath="..\..\..\src\libparticle2d\SelectSpritesOP.cpp"
+					RelativePath="..\..\..\src\libparticle2d\EditOP.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\libparticle2d\SelectSpritesOP.h"
+					RelativePath="..\..\..\src\libparticle2d\EditOP.h"
 					>
 				</File>
 				<File
@@ -269,6 +269,18 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\libparticle2d\LibraryPanel.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="property"
+				>
+				<File
+					RelativePath="..\..\..\src\libparticle2d\PropertySetting.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle2d\PropertySetting.h"
 					>
 				</File>
 			</Filter>
