--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -638,6 +638,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldP3DFile.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\TransOldP3DFile.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\TransOldShapeFile.cpp"
 					>
 				</File>
