--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -473,6 +473,14 @@
 					Name="cut"
 					>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\AverageRectCut.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\AverageRectCut.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\RectCutWithJson.cpp"
 						>
 					</File>
