--- a/epbin/platform/msvc2008/projects/libepbin.vcproj
+++ b/epbin/platform/msvc2008/projects/libepbin.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../ejoy2d/src;../../../../easyimage/src;../../../../dtex/src;../../../../editor-external/libpng/include;../../../../editor-external/lua/include;../../../../editor-external/lzma/include;../../../../editor-external/json/include;../../../../editor-external/c99;../../../../drag2d/src/drag2d;../../../../editor-external/wx/include;../../../../editor-external/freetype/include"
+				AdditionalIncludeDirectories="../../../../drag2d/src/drag2d;../../../../ejoy2d/src;../../../../easyimage/src;../../../../dtex/src;../../../../particle/src;&quot;../../../../editor-external/libpng/include&quot;;&quot;../../../../editor-external/lua/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/json/include&quot;;&quot;../../../../editor-external/c99&quot;;&quot;../../../../editor-external/wx/include&quot;;&quot;../../../../editor-external/freetype/include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../../../ejoy2d/src;../../../../easyimage/src;../../../../dtex/src;../../../../editor-external/libpng/include;../../../../editor-external/lua/include;../../../../editor-external/lzma/include;../../../../editor-external/json/include;../../../../editor-external/c99;../../../../drag2d/src/drag2d;../../../../editor-external/wx/include;../../../../editor-external/freetype/include"
+				AdditionalIncludeDirectories="../../../../drag2d/src/drag2d;../../../../ejoy2d/src;../../../../easyimage/src;../../../../dtex/src;../../../../particle/src;&quot;../../../../editor-external/libpng/include&quot;;&quot;../../../../editor-external/lua/include&quot;;&quot;../../../../editor-external/lzma/include&quot;;&quot;../../../../editor-external/json/include&quot;;&quot;../../../../editor-external/c99&quot;;&quot;../../../../editor-external/wx/include&quot;;&quot;../../../../editor-external/freetype/include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
