--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easyicon\src;..\..\..\..\easytext\src;..\..\..\..\editor-external\wx\include;..\..\..\..\editor-external\json\include;..\..\..\..\editor-external\freetype\include;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\rapidxml\include"
+				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easyicon\src;..\..\..\..\easytext\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\rapidxml\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easyicon\src;..\..\..\..\easytext\src;..\..\..\..\editor-external\wx\include;..\..\..\..\editor-external\json\include;..\..\..\..\editor-external\freetype\include;..\..\..\..\editor-external\c99;..\..\..\..\editor-external\lua\include;..\..\..\..\editor-external\rapidxml\include"
+				AdditionalIncludeDirectories="..\..\..\src\easyanimation;..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyscale9\src;..\..\..\..\easyanim\src;..\..\..\..\easyimage\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easyicon\src;..\..\..\..\easytext\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\rapidxml\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
